Don't include tensorflow-macos.

--- a/requirements.txt
+++ b/requirements.txt
@@ -74,7 +74,7 @@ tensorflow-decision-forests==1.8.1
 tensorflow-estimator==2.15.0
 tensorflow-hub==0.15.0
 tensorflow-io-gcs-filesystem==0.34.0
-tensorflow-macos==2.15.0
+#tensorflow-macos==2.15.0
 tensorflowjs==4.16.0
 tensorstore==0.1.45
 termcolor==2.4.0
