Remove concurrency level as nothing works now.

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -8,7 +8,7 @@ autostart=true
 autorestart=true
 
 [program:celeryworker]
-command=celery -A celery_worker.celery worker --concurrency=1 --loglevel=info 
+command=celery -A celery_worker.celery worker --loglevel=info
 directory=/usr/src/app
 autostart=true
 autorestart=true
